# rs-tgbot

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: rust.yml
config/: default.toml
prompts/: system_prompt.md
prompts/test/: system_prompt.md
src/: error.rs  main.rs
src/bot/: mod.rs  telegram_client.rs
src/bot/handlers/: chat.rs
src/db/: history.rs  history_json.rs  history_sqlite.rs  mod.rs  sqlite_pool.rs  user_prefs.rs  user_prefs_json.rs  user_prefs_sqlite.rs
src/services/: llm.rs  mod.rs  user_prefs.rs
src/util/: mod.rs  testutil.rs
