[package]
name = "rs-tgbot"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.13", features = ["toml"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
async-trait = "0.1.89"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
